--- a/KINOv2/KINOv2/Views/Home/Contact.cshtml
+++ b/KINOv2/KINOv2/Views/Home/Contact.cshtml
@@ -17,7 +17,7 @@
 </address>*@
 
     <div class="row">
-        <div class="col-12 col-md-4">
+        <div class="col-12 col-md-4 col-lg-4">
             <address>
                 <strong>Димон:</strong><p>Да там почти нет отличий. За час перенесу. &copy;</p><br />
                 <strong>Леха:</strong><p>Кроссплатформенность &hearts; </p><br />
@@ -25,7 +25,7 @@
             </address>
         </div>
 
-        <div class="col-12 col-md-8 h_iframe" style="height:400px;">
+        <div class="col-12 col-md-8 col-lg-12 h_iframe" style="height:400px;">
             <iframe src="https://yandex.ru/map-widget/v1/-/CBUcUCeAsD" frameborder="0"></iframe>
         </div>
     </div>
