--- a/KINOv2/KINOv2/Views/Home/Affiche.cshtml
+++ b/KINOv2/KINOv2/Views/Home/Affiche.cshtml
@@ -17,10 +17,10 @@
 
     }
 
-        <div class="row">
+        <div class="row justify-content-sm-center justify-content-md-start">
             @foreach (Film film in ViewData["Films"] as IEnumerable<Film>)
     {
-        <div class="col-9 col-md-4 mb-3 mx-auto mt-2">
+        <div class="col-9 col-sm-5 col-md-3 col-lg-4 col-xl-3 mb-3 mx-auto mx-sm-0 mt-2 mt-md-0">
             @{
                 @*<div class="poster-image" style="background-image: url('@Url.Content("~/images/Posters/" + film.Poster)')"></div>
             <div class="film-info col-md-6">
@@ -29,16 +29,16 @@
                 <strong>Ограничение: </strong><span>@film.AgeLimit.Value</span><br />
             </div>*@
                 <div>
-                    <a class="text-orange" asp-area="" asp-controller="Home" asp-action="Film" asp-route-id="@film.LINK">
+                    <a class="text-orange affiche-film" asp-area="" asp-controller="Home" asp-action="Film" asp-route-id="@film.LINK">
                         <div class="image-container" ><img class="img-fluid"  src="@Url.Content("~/images/Posters/" + film.Poster)" /></div>
-                        <div class="h2 text-center text-orange">
+                        <div class="h3 text-center text-orange">
                             @(film.Name)
                         </div>
                     </a>
                 </div>
             }
         </div>
-        <div class="col-9 col-md-4 mb-3 mx-auto">
+        <div class="col-9 col-sm-5 col-md-3 col-lg-4 col-xl-3 mb-3 mx-auto mx-sm-0 mt-2 mt-md-0">
             @{
                 @*<div class="poster-image" style="background-image: url('@Url.Content("~/images/Posters/" + film.Poster)')"></div>
             <div class="film-info col-md-6">
@@ -56,7 +56,7 @@
                 </div>
             }
         </div>
-        <div class="col-9 col-md-4 mb-3 mx-auto">
+        <div class="col-9 col-sm-5 col-md-3 col-lg-4 col-xl-3 mb-3 mx-auto mx-sm-0 mt-2 mt-md-0">
             @{
                 @*<div class="poster-image" style="background-image: url('@Url.Content("~/images/Posters/" + film.Poster)')"></div>
             <div class="film-info col-md-6">
