--- a/KINOv2/KINOv2/Views/Home/FilmSessions.cshtml
+++ b/KINOv2/KINOv2/Views/Home/FilmSessions.cshtml
@@ -10,29 +10,29 @@
             if (pair.Value.Count > 0)
             {
                 <div class="text-center text-info my-1">@pair.Key</div>
-                <div class="row mb-2">
+                <div class="row mb-2 justify-content-center">
                     @foreach (var session in pair.Value)
                     {
-                        <a class="col-4 col-md-2 session-link" asp-controller="Home" asp-action="Sessions" asp-route-id="@session.LINK"><div class="session-button">@session.SessionTime.ToShortTimeString()</div></a>
-                        <a class="col-4 col-md-2 session-link" asp-controller="Home" asp-action="Sessions" asp-route-id="@session.LINK"><div class="session-button">@session.SessionTime.ToShortTimeString()</div></a>
-                        <a class="col-4 col-md-2 session-link" asp-controller="Home" asp-action="Sessions" asp-route-id="@session.LINK"><div class="session-button">@session.SessionTime.ToShortTimeString()</div></a>
+                        <a class="col-4 col-md-3 col-lg-2 session-link" asp-controller="Home" asp-action="Sessions" asp-route-id="@session.LINK"><div class="session-button">@session.SessionTime.ToShortTimeString()</div></a>
+                        <a class="col-4 col-md-3 col-lg-2 session-link" asp-controller="Home" asp-action="Sessions" asp-route-id="@session.LINK"><div class="session-button">@session.SessionTime.ToShortTimeString()</div></a>
+                        <a class="col-4 col-md-3 col-lg-2 session-link" asp-controller="Home" asp-action="Sessions" asp-route-id="@session.LINK"><div class="session-button">@session.SessionTime.ToShortTimeString()</div></a>
                     }
                 </div>
 
-                <div class="row mb-2">
+                <div class="row mb-2 justify-content-center">
                     @foreach (var session in pair.Value)
                     {
-                        <a class=" col-4 col-md-2 session-link" asp-controller="Home" asp-action="Sessions" asp-route-id="@session.LINK"><div class="session-button">@session.SessionTime.ToShortTimeString()</div></a>
-                        <a class="col-4 col-md-2 session-link" asp-controller="Home" asp-action="Sessions" asp-route-id="@session.LINK"><div class="session-button">@session.SessionTime.ToShortTimeString()</div></a>
-                        <a class="col-4 col-md-2 session-link" asp-controller="Home" asp-action="Sessions" asp-route-id="@session.LINK"><div class="session-button">@session.SessionTime.ToShortTimeString()</div></a>
+                        <a class=" col-4 col-md-3 col-lg-2 session-link" asp-controller="Home" asp-action="Sessions" asp-route-id="@session.LINK"><div class="session-button">@session.SessionTime.ToShortTimeString()</div></a>
+                        <a class="col-4 col-md-3 col-lg-2 session-link" asp-controller="Home" asp-action="Sessions" asp-route-id="@session.LINK"><div class="session-button">@session.SessionTime.ToShortTimeString()</div></a>
+                        <a class="col-4 col-md-3 col-lg-2 session-link" asp-controller="Home" asp-action="Sessions" asp-route-id="@session.LINK"><div class="session-button">@session.SessionTime.ToShortTimeString()</div></a>
                     }
                 </div>
-                <div class="row mb-2">
+                <div class="row mb-2 justify-content-center">
                     @foreach (var session in pair.Value)
                     {
-                        <a class=" col-4 col-md-2 session-link" asp-controller="Home" asp-action="Sessions" asp-route-id="@session.LINK"><div class="session-button">@session.SessionTime.ToShortTimeString()</div></a>
-                        <a class="col-4 col-md-2 session-link" asp-controller="Home" asp-action="Sessions" asp-route-id="@session.LINK"><div class="session-button">@session.SessionTime.ToShortTimeString()</div></a>
-                        <a class="col-4 col-md-2 session-link" asp-controller="Home" asp-action="Sessions" asp-route-id="@session.LINK"><div class="session-button">@session.SessionTime.ToShortTimeString()</div></a>
+                        <a class=" col-4 col-md-3 col-lg-2 session-link" asp-controller="Home" asp-action="Sessions" asp-route-id="@session.LINK"><div class="session-button">@session.SessionTime.ToShortTimeString()</div></a>
+                        <a class="col-4 col-md-3 col-lg-2 session-link" asp-controller="Home" asp-action="Sessions" asp-route-id="@session.LINK"><div class="session-button">@session.SessionTime.ToShortTimeString()</div></a>
+                        <a class="col-4 col-md-3 col-lg-2 session-link" asp-controller="Home" asp-action="Sessions" asp-route-id="@session.LINK"><div class="session-button">@session.SessionTime.ToShortTimeString()</div></a>
                     }
                 </div>
             }
