--- a/KINOv2/KINOv2/Views/Home/Comments.cshtml
+++ b/KINOv2/KINOv2/Views/Home/Comments.cshtml
@@ -16,7 +16,7 @@
 
             <div class="row mx-auto mx-sm-0 w-100">
                      <div class="col-8 col-sm-8 col-md-10">
-                        <a class="text-orange" asp-area="" asp-controller="Home" asp-action="Profile" asp-route-username="@comment.ApplicationUser.UserName">@comment.ApplicationUser.UserName</a>
+                        <a class="text-info" asp-area="" asp-controller="Home" asp-action="Profile" asp-route-username="@comment.ApplicationUser.UserName">@comment.ApplicationUser.UserName</a>
                     </div>
                     <div class="col-8 col-sm-8 col-md-10 order-2">
                         @if (comment.Date != null)
