--- a/KINOv2/KINOv2/Views/Content/FilmManage.cshtml
+++ b/KINOv2/KINOv2/Views/Content/FilmManage.cshtml
@@ -7,60 +7,59 @@
 
 <h3>@ViewData["Message"]</h3>
 <hr />
-<div class="container">
-    <div class="row">
-        <div class="col-md-6 col-md-offset-1">
+    <div class="row justify-content-center">
+        <div class="col-12 col-sm-10 col-md-5 col-lg-4">
             <form asp-area="" asp-controller="Content" asp-action="FilmManage" method="post" enctype="multipart/form-data" role="form" class="form-horizontal">
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="Film.Name"></label>
-                    <input asp-for="Film.Name" class="form-control" />
+                    <label class="text-info" asp-for="Film.Name"></label>
+                    <input asp-for="Film.Name" class="form-control control" />
                 </div>
                 <div class="form-group">
-                    <label asp-for="Film.DirectorLINK"></label>
-                    <select asp-for="Film.DirectorLINK" asp-items="ViewBag.Directors" class="form-control"></select>
+                    <label class="text-info" asp-for="Film.DirectorLINK"></label>
+                    <select asp-for="Film.DirectorLINK" asp-items="ViewBag.Directors" class="form-control control"></select>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Film.GenreLINK"></label>
-                    <select asp-for="Film.GenreLINK" asp-items="ViewBag.Genres" class="form-control"></select>
+                    <label class="text-info" asp-for="Film.GenreLINK"></label>
+                    <select asp-for="Film.GenreLINK" asp-items="ViewBag.Genres" class="form-control control"></select>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Film.ReleaseYear"></label>
-                    <input asp-for="Film.ReleaseYear" class="form-control" />
+                    <label class="text-info" asp-for="Film.ReleaseYear"></label>
+                    <input asp-for="Film.ReleaseYear" class="form-control control" />
                 </div>
                 <div class="form-group">
-                    <label asp-for="Film.AgeLimitLINK"></label>
-                    <select asp-for="Film.AgeLimitLINK" asp-items="ViewBag.AgeLimits" class="form-control"></select>
+                    <label class="text-info" asp-for="Film.AgeLimitLINK"></label>
+                    <select asp-for="Film.AgeLimitLINK" asp-items="ViewBag.AgeLimits" class="form-control control"></select>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Film.CountryLINK"></label>
-                    <select asp-for="Film.CountryLINK" asp-items="ViewBag.Countries" class="form-control"></select>
+                    <label class="text-info" asp-for="Film.CountryLINK"></label>
+                    <select asp-for="Film.CountryLINK" asp-items="ViewBag.Countries" class="form-control control"></select>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Film.Duration"></label>
-                    <input asp-for="Film.Duration" class="form-control" />
+                    <label class="text-info" asp-for="Film.Duration"></label>
+                    <input asp-for="Film.Duration" class="form-control control" />
                 </div>
                 <div class="form-group">
-                    <label asp-for="Film.Poster"></label>
-                    <input asp-for="Film.Poster" class="form-control" />
+                    <label class="text-info" asp-for="Film.Poster"></label>
+                    <input asp-for="Film.Poster" class="form-control control" />
                 </div>
                 <div class="form-group">
-                    <label asp-for="UploadedFile"></label>
+                    <label class="text-info" asp-for="UploadedFile"></label>
                     <input asp-for="UploadedFile" type="file" name="UploadedFile" onchange="SetNewEntry(this.files);" />
 
                 </div>
                 @if (Model.Film != null)
                 {
                 <input asp-for="Film.LINK" type="hidden" />
-                <div class="col-md-offset-4 col-md-8">
-                    <button type="submit" class="btn btn-default">Update</button>
+                <div class="">
+                    <button type="submit" class="btn border-orange px-lg-5 w-100">Обновить</button>
                 </div>
                 }
                 else
                 {
-            <div class="col-md-offset-4 col-md-8">
-                <button type="submit" class="btn btn-default">Save</button>
-            </div>
+                <div class="">
+                    <button type="submit" class="btn border-orange px-lg-5 w-100">Сохранить</button>
+                </div>
                 }
             </form>
         </div>
@@ -71,9 +70,8 @@
                 image = (Url.Content("~/images/Posters/") + Model.Film.Poster);
             }
         
-        <div class="col-md-5">
-            <img id="filmimage" class="film-content-image" src=@image />
+        <div class="col-12 col-sm-10 col-md-6 col-lg-5 mt-4">
+            <img id="filmimage" class="img-fluid" src=@image />
         </div>
         }
     </div>
-</div>
