--- a/KINOv2/KINOv2/Views/Manage/Index.cshtml
+++ b/KINOv2/KINOv2/Views/Manage/Index.cshtml
@@ -129,39 +129,39 @@
                         <input class="text-center" asp-for="ProfileUploaded" type="file" name="ProfileUploaded" onchange="ChangeImage(this.files);" />
                     </div>
                     <div class="form-group">
-                        <label asp-for="Email"></label>
-                        <input asp-for="Email" class="form-control" style="color:#000000" />
+                        <label class="text-info" asp-for="Email"></label>
+                        <input asp-for="Email" class="form-control control" style="color:#000000" />
                     </div>
                     <div class="form-group">
-                        <label asp-for="PhoneNumber"></label>
-                        <input asp-for="PhoneNumber" class="form-control" />
+                        <label class="text-info" asp-for="PhoneNumber"></label>
+                        <input asp-for="PhoneNumber" class="form-control control" />
                     </div>
                     <div class="form-group">
-                        <label asp-for="Name"></label>
-                        <input asp-for="Name" class="form-control" />
+                        <label class="text-info" asp-for="Name"></label>
+                        <input asp-for="Name" class="form-control control" />
                     </div>
                     <div class="form-group">
-                        <label asp-for="SurName"></label>
-                        <input asp-for="SurName" class="form-control" />
+                        <label class="text-info" asp-for="SurName"></label>
+                        <input asp-for="SurName" class="form-control control" />
                     </div>
                     <div class="form-group">
-                        <label asp-for="Age"></label>
-                        <input asp-for="Age" class="form-control" />
+                        <label class="text-info" asp-for="Age"></label>
+                        <input asp-for="Age" class="form-control control" />
                     </div>
                     <div class="form-group">
-                        <label asp-for="City"></label>
-                        <input asp-for="City" class="form-control" />
+                        <label class="text-info" asp-for="City"></label>
+                        <input asp-for="City" class="form-control control" />
                     </div>
                     <div class="form-group">
-                        <label asp-for="About"></label>
-                        <textarea asp-for="About" class="form-control"></textarea>
+                        <label class="text-info" asp-for="About"></label>
+                        <textarea asp-for="About" class="form-control control"></textarea>
                     </div>
                     <div class="form-group">
-                        <label asp-for="PersonalInfoVisible"></label>
+                        <label class="text-info" asp-for="PersonalInfoVisible"></label>
                         <input asp-for="PersonalInfoVisible" class="form-check-inline" />
                     </div>
                     <div class="form-group">
-                        <label asp-for="SelectedFilmsVisible"></label>
+                        <label class="text-info" asp-for="SelectedFilmsVisible"></label>
                         <input asp-for="SelectedFilmsVisible" class="form-check-inline" />
                     </div>
                     <button type="submit" class="btn border-orange float-right px-5">Сохранить</button>
@@ -175,18 +175,18 @@
                     <form asp-action="ChangePassword" asp-controller="Manage" method="post">
                         <div asp-validation-summary="All" class="text-danger"></div>
                         <div class="form-group">
-                            <label asp-for="ChangePasswordModel.OldPassword"></label>
-                            <input asp-for="ChangePasswordModel.OldPassword" class="form-control" />
+                            <label class="text-info" asp-for="ChangePasswordModel.OldPassword"></label>
+                            <input asp-for="ChangePasswordModel.OldPassword" class="form-control control" />
                             <span asp-validation-for="ChangePasswordModel.OldPassword" class="text-danger"></span>
                         </div>
                         <div class="form-group">
-                            <label asp-for="ChangePasswordModel.NewPassword"></label>
-                            <input asp-for="ChangePasswordModel.NewPassword" class="form-control" />
+                            <label class="text-info" asp-for="ChangePasswordModel.NewPassword"></label>
+                            <input asp-for="ChangePasswordModel.NewPassword" class="form-control control" />
                             <span asp-validation-for="ChangePasswordModel.NewPassword" class="text-danger"></span>
                         </div>
                         <div class="form-group">
-                            <label asp-for="ChangePasswordModel.ConfirmPassword"></label>
-                            <input asp-for="ChangePasswordModel.ConfirmPassword" class="form-control" />
+                            <label class="text-info" asp-for="ChangePasswordModel.ConfirmPassword"></label>
+                            <input asp-for="ChangePasswordModel.ConfirmPassword" class="form-control control" />
                             <span asp-validation-for="ChangePasswordModel.ConfirmPassword" class="text-danger"></span>
                         </div>
                         <button type="submit" class="btn border-orange float-right">Обновить пароль</button>
